@@ -9,6 +9,9 @@ MComix 1.01
       "Last read" database might no longer exist, leading to program crash.
       This has been fixed.
 
+    - Adding a collection with a numeric name to the library made the library
+      unusable. This has been fixed.
+
     - Fixed win32 builds missing the 'calendar' module.
 
     - Fixed bookmarks not being displayed in the Ubuntu Unity global menu.
